--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.0.0/css/font-awesome.min.css"
     />
-    <script src="script.js"></script>
   </head>
 
   <body>
@@ -24,7 +23,7 @@
         <h1>WELCOME</h1>
         <h1>TO</h1>
         <h1>LINGUA</h1>
-        <h2>BOOK YOUR COURSE NOW!</h2>
+        <h2 class="main_h2">BOOK YOUR COURSE NOW!</h2>
         <div class="icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
