--- a/form.html
+++ b/form.html
@@ -115,23 +115,7 @@
           <!--Vorname-->
           <div class="inputGroup-AGB" style="position: relative">
             <input type="checkbox" name="agb" id="agb" />
-            <div
-              class="coverInput"
-              style="
-                width: 2rem;
-                height: 2rem;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                bottom: auto;
-                top: auto;
-                background-color: #36a188;
-                z-index: 10;
-                opacity: 0.5;
-                border-radius: 0.1rem;
-                border: 1px solid #2d3e3a;
-              "
-            ></div>
+            <div class="coverInput"></div>
 
             <label for="agb">I agree with the <b>terms of Lingua</b> </label>
           </div>
